# cmake-demo

./: .gitignore  CMakeLists.txt  build.sh  cmake_demo.h.in  configure.sh  main.cpp  run.sh
adder/: adder.h
